07/21/2006
----------
1. a third commit to further update the en_US templates,
   as is sometimes necessary for large commits to SVN.


07/21/2006
----------
1. a second commit to update the en_US templates


07/21/2006
----------
1. switch from languages/charsets to full locale names globally.
   OpenWebMail is now standardized on ISO-3066 for locale names
   across templates, language, holiday, help files, and popups.
   user preferences are automatically updated. Systems admins
   should update the 'calendar_holiday' settings in openwebmail.conf
   to call for a locale specific holiday file.
2. multiple SMTP servers are now supported for 'smtpserver' setting to
   provide redundancy in case of primary SMTP failure.
   (suggested by Michael Mansour, mic.AT.npgx.com.au)
3. Hellenic translations have been renamed to Greek.
   (suggested by Dimitrios 'sehh' Michelinakis, sehh.AT.altered.com)
4. fix bug in iconv.pl where some windows charsets were misspelled
   as winodws, breaking some charset conversion support.
5. minor code clean and comment spelling fixes.


06/18/2006
----------
1. German help files translation
   (thanks to Helmut Grund, Helmut.Grund.AT.fh-furtwangen.de)
2. update the welcome/copyright date from 2005 to 2006
3. fix additional XSS exploits in openwebmail-read.pl due to the
   from address not being sanitized properly
4. fix bug that clicking user name for compose will pass escaped
   values to the form field instead of proper email address
   (due to fix 20060512 #5)
5. support application/octet-stream attachments that are really
   text/html. Detect them and display them inline. Apple-Mail
   incorrectly sends text/html attachments in this way.


05/12/2006
----------
1. fix error that ow::htmltext::str2html is not available to display
   some error messages because it needs to be require'd in ow-shared.pl
   (thanks to Chris Hare, CISSP, CISA, CISM, chare.AT.labr.net)
2. modify some additional openwebmailerror calls that need to display